microserv-scooter/src/main/java/org/example/microservscooter/error/exception/NotFoundIDException.java
package org.example.microservscooter.error.exception;

public class NotFoundIDException extends RuntimeException{
    public NotFoundIDException(String message) {
        super(message);
    }
}
